5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4012/executions/1635_2443.log
== TEST (2019-04-08 14:16:42) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
var: float(input("digite volume de ar: "))
vcomb = float(input("digite volume comb: "))

from math import *

Vesf = (4 * pi * r ** 3) / 3

Vcart = pi * x ** 2(3 * r - x) / 3 

print(round(Vesf ,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vcomb = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:16:56) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
var = float(input("digite volume de ar: "))
vcomb = float(input("digite volume comb: "))

from math import *

Vesf = (4 * pi * r ** 3) / 3

Vcart = pi * x ** 2(3 * r - x) / 3 

print(round(Vesf ,4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    vcomb = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:19:31) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = float(input("digite volume: "))

from math import *

Vesf = (4 * pi * r ** 3) / 3

Vcart = pi * x ** 2(3 * r - x) / 3 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    Vcart = pi * x ** 2(3 * r - x) / 3 
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:19:44) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = float(input("digite volume: "))

from math import *

Vesf = (4 * pi * r ** 3) / 3

Vcart = pi * x ** 2(3 * r - x) / 3 


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    Vcart = pi * x ** 2(3 * r - x) / 3 
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:04:46) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite n: "))

from math import *

if (n == n1):
	v = (4 * pi * r ** 3) / 3
else:
	v = pi * x ** 2(3 * r - x) / 3 
	
print(round(v, 4))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (n == n1):
NameError: name 'n1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 15:05:03) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite n: "))

from math import *

if (n == n1):
	v = (4 * pi * r ** 3) / 3
else:
	v = pi * x ** 2(3 * r - x) / 3 
	
print(round(v, 4))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    if (n == n1):
NameError: name 'n1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:43:17) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = pi * x ** 2(3 * r - x) / 3 
else:
	v = (4 * pi * r ** 3) / 3
	
print(round(v, 4))
	




-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:44:11) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2(3 * r - x)) / 3 
else:
	v = (4 * pi * r ** 3) / 3
	
print(round(v, 4))
	




-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 20:44:53) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2(3 * r - x)) / 3 
else:
	v = (4 * pi * r ** 3) / 3
	
print(round(v, 4))
	




-- EXECUTION TIME:
0.142804
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
179.5944
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
310.3391
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:45:21) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = (4 * pi * r ** 3) / 3
	
print(round(v, 4))
	




-- OUTPUT:
179.5944
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:49:35) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 20:49:51) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- EXECUTION TIME:
0.12778
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:50:02) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 20:50:15) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- EXECUTION TIME:
0.173717
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:51:08) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 20:51:17) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- EXECUTION TIME:
0.186471
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 20:51:29) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 21:17:05) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 21:17:20) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- EXECUTION TIME:
0.145576
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
170.5687
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 21:19:20) 
-- CODE:
r = int(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    r = int(input())
ValueError: invalid literal for int() with base 10: '3.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 21:19:30) 
-- CODE:
r = int(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    r = int(input())
ValueError: invalid literal for int() with base 10: '3.50'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 21:19:41) 
-- CODE:
r = int(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- EXECUTION TIME:
0.2036
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2443/main.py", line 1, in <module>
    r = int(input())
ValueError: invalid literal for int() with base 10: '3.50'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 21:19:54) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = input("volume? (1/2): ")

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- OUTPUT:
170.5687
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 21:26:51) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = int(input("volume? (1/2): "))

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 21:27:10) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
v = int(input("volume? (1/2): "))

from math import *

if (v == 1):
	v = (pi * x ** 2 * (3 * r - x)) / 3 
else:
	v = ((4 * pi * r ** 3) / 3) - ((pi * x ** 2 * (3 * r - x)) / 3 )
	
print(round(v, 4))
	




-- EXECUTION TIME:
0.144709
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
